--- a/Airline_Delay_Cause_fatma.ipynb
+++ b/Airline_Delay_Cause_fatma.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "18xnh5hU77E_C2xov_SRF63_YyIcOMLfL",
+      "authorship_tag": "ABX9TyPgr5AeEcm0ZF0XFvAdnFj0",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +18,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Fatma-Laidani/Airline_Delay_Cause/blob/main/Airline_Delay_Cause_fatma.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "x_7AW7XQtZ_7"
       },
@@ -35,7 +48,7 @@
       "metadata": {
         "id": "VCEw7PC1Zgws"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -51,7 +64,7 @@
         "id": "ruSurR8yXC28",
         "outputId": "b0b4f7bb-bce9-41e5-8f5d-80fbe58e6bd3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +737,7 @@
         "id": "M2QWht6cVEDH",
         "outputId": "dfd8ee5c-8a54-43f8-d395-158e6b6c8ec1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,7 +788,7 @@
         "id": "jloHNLCcUSAL",
         "outputId": "19f72563-bd73-4aef-bf6f-d08b0d702f95"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1269,7 +1282,7 @@
         "id": "98en2XP-USjx",
         "outputId": "0fee3676-9d66-4edb-b295-7b472ce226e6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1882,7 +1895,7 @@
         "id": "pxk11yy5USnS",
         "outputId": "b8ff8f7d-f582-433d-a83f-f466af243daf"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1924,7 +1937,7 @@
       "metadata": {
         "id": "8t0592JtMkTV"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1949,7 +1962,7 @@
         "id": "GgZrugPSMslg",
         "outputId": "7eba6398-df99-42bf-c091-56932a367d28"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1986,7 +1999,7 @@
         "id": "VECqEy-ENioN",
         "outputId": "897fbf79-177e-4549-ded3-decd06f86ea4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2016,7 +2029,7 @@
         "id": "NABoesqfOVxp",
         "outputId": "0d8e19cf-28c8-4cf3-9369-a64d87879a9a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2637,7 +2650,7 @@
       "metadata": {
         "id": "oeZg5V2zOitP"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2652,7 +2665,7 @@
         "id": "LL2bmM7LOy6L",
         "outputId": "a038f9fb-1259-4ad1-c4ff-7a2466a53fb2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2678,7 +2691,7 @@
         "id": "WOHewl-nO4Jk",
         "outputId": "f6d41294-b3ec-4436-e916-c67f45fd6847"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2701,7 +2714,7 @@
       "metadata": {
         "id": "HDule_AcPD5K"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2713,7 +2726,7 @@
       "metadata": {
         "id": "dIT7TsgTP7TK"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2730,7 +2743,7 @@
       "metadata": {
         "id": "iumDU0meQNfw"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2755,7 +2768,7 @@
       "metadata": {
         "id": "qUpq_FSDZGdT"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2766,7 +2779,7 @@
       "metadata": {
         "id": "Tq3H5VcFZLMP"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2792,7 +2805,7 @@
         "id": "HCW01lPSZ7zi",
         "outputId": "8bf684ca-ba53-419f-c49e-d92d19ba3bb3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2912,7 +2925,7 @@
         "id": "qFQro2kov7e5",
         "outputId": "f317d9dc-0e43-42c8-ce37-277632033037"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2949,7 +2962,7 @@
       "metadata": {
         "id": "HS1HBkQbv3Bp"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2960,7 +2973,7 @@
       "metadata": {
         "id": "wuEpDVg0wYP9"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2975,7 +2988,7 @@
         "id": "woz-u70QwkeP",
         "outputId": "cf2e5991-70aa-48db-a415-fbf4db2d4570"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2994,7 +3007,7 @@
       "metadata": {
         "id": "fHa6vKNKznwx"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3011,7 +3024,7 @@
         "id": "nFkxmka_zMeY",
         "outputId": "4c3d2d0f-168a-4d32-d3b3-9eb2b3d975e8"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3063,7 +3076,7 @@
         "id": "Hb19JcxqzF_t",
         "outputId": "a6e952f4-e897-4a04-ab18-e1f93a91be70"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3101,7 +3114,7 @@
         "id": "laNAXTBP0-Ej",
         "outputId": "f841db19-67a8-4975-84c9-76537d0131c5"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3133,7 +3146,7 @@
         "id": "GwcUL2lb1TAm",
         "outputId": "6ada48cb-13d0-4789-dffe-a5a47548ac0e"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3155,7 +3168,7 @@
       "metadata": {
         "id": "1p1j7FB14lh_"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3172,7 +3185,7 @@
         "id": "3u-i7RWY38RB",
         "outputId": "65360310-6f88-4e50-ee6b-8115683fb74f"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
